<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".Contact">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contact us"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning1"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning2"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning3"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning4"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning5"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning6"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_warning7"
            android:textColor="@android:color/holo_red_dark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Sender:"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="20sp"/>

        <TextView
            android:id="@+id/contactMailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/subjectEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Subject"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:minLines="1"
            android:maxLines="15"
            android:hint="Message"
            android:gravity="center"
            android:textColorHint="@color/black"/>

        <Button
            android:id="@+id/contactSendButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="send message"
            android:textSize="20sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>